custom form width issue on mobile fix

--- a/src/components/customForm/CustomForm.scss
+++ b/src/components/customForm/CustomForm.scss
@@ -1,88 +1,88 @@
 .custom-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 
-    .form-title {
-        color: #152C5B;
-        margin-bottom: 25px;
+  .form-title {
+    color: #152c5b;
+    margin-bottom: 2rem;
+  }
+
+  label {
+    display: block;
+    color: #152c5b;
+    font-weight: 400;
+    font-size: 1.1rem;
+  }
+
+  section {
+    margin-bottom: 1rem;
+
+    .error-message {
+      color: rgb(146, 35, 35);
+      font-size: 14px;
+      position: absolute;
     }
+  }
 
-    label {
-        display: block;
-        color: #152C5B;
-        font-weight: 400;
-    }
+  input,
+  select {
+    background: #f5f6f8;
+    border-radius: 4px;
+    border: none;
+    width: 320px;
+    height: 40px;
+    padding: 0 10px;
+  }
 
-    section {
-        margin-bottom: 20px;
+  .input-error {
+    border: 1px solid rgb(146, 35, 35);
+  }
 
-        .error-message {
-            color: red;
-            font-size: 12px;
-            position: absolute;
-        }
-    }
+  .btn-form-submit {
+    width: 320px;
+    height: 40px;
+    border: none;
+    background: #3252df;
+    color: white;
+    border-radius: 4px;
+  }
 
+  .response-message {
+    width: 320px;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    font-size: 14px;
+  }
+
+  .error {
+    background-color: #f8d7da;
+    color: #842029;
+  }
+
+  .success {
+    background-color: #d1e7dd;
+    color: #0f5132;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .custom-form {
+    height: auto;
+    margin: 0 2rem;
+  }
+}
+
+@media (max-width: 420px) {
+  .custom-form {
     input,
-    select {
-        background: #F5F6F8;
-        border-radius: 4px;
-        border: none;
-        width: 320px;
-        height: 40px;
-        padding: 0 10px;
-    }
-
-    .input-error {
-        border: 1px solid red;
-    }
-
-    .btn-form-submit {
-        width: 320px;
-        height: 40px;
-        border: none;
-        background: #3252DF;
-        color: white;
-        border-radius: 4px;
-    }
-
+    select,
+    .btn-form-submit,
     .response-message {
-        width: 320px;
-        text-align: center;
-        padding: 0;
-        margin: 0;
-        font-size: 14px;
+      width: 82vw;
     }
-
-    .error {
-        background-color: #f8d7da;
-        color: #842029;
-    }
-
-    .success {
-        background-color: #d1e7dd;
-        color: #0f5132;
-    }
-}
-
-
-@media(max-width:767.98px) {
-    .custom-form {
-        height: auto;
-    }
-}
-
-@media(max-width:420px) {
-    .custom-form {
-
-        input,
-        select,
-        .btn-form-submit,
-        .response-message {
-            width: 270px;
-        }
-    }
+  }
 }
