--- a/src/pages/signin/Signin.scss
+++ b/src/pages/signin/Signin.scss
@@ -18,6 +18,10 @@
     }
   }
 
+  .topcircles {
+    display: none;
+  }
+
   .form-container {
     height: 100vh;
   }
@@ -36,8 +40,13 @@
 
 @media (max-width: 767.98px) {
   .signin-page {
+    width: 90%;
     display: grid;
     grid-template-columns: auto;
+
+    .topcircles {
+      display: block;
+    }
 
     .form-container {
       height: auto;
